--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     <h1> RUN BUDDY</h1>
-    What We Do
+    What We Do What Do your Trainers Reach Out
 
-    🏃
 </body>
 
 </html>
