--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Run Buddy</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <h1>
-       <a href="/"> RUN BUDDY</a>
-       
+        <a href="/"> RUN BUDDY</a>
       </h1>
       <nav>
-        <!-- Unordered list element -->
         <ul>
-          <!-- List item element-->
           <li>
-            <!-- Anchor element -->
             <a href="#what-we-do">What We Do</a>
           </li>
           <li>
