run buddy updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <header>
       <h1>
@@ -50,9 +51,12 @@
     <section>
       <h2>Reach Out</h2>
     </section>
-
     <footer>
       <h2>❤️ Made with Love by Run Buddy</h2>
+      <div>
+        <a href="#">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+      </div>
     </footer>
   </body>
 </html>
